--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.6.1"
+    "react-scripts": "0.6.1",
+    "@kadira/storybook": "^2.5.2"
   },
   "dependencies": {
     "react": "^15.3.2",
@@ -11,6 +12,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009",
+    "build-storybook": "build-storybook"
   }
 }
