--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,9 @@
 {
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.6.1",
-    "@kadira/storybook": "^2.5.2"
+    "@kadira/storybook": "^2.5.2",
+    "classnames": "^2.2.5",
+    "react-scripts": "0.6.1"
   },
   "dependencies": {
     "react": "^15.3.2",
