--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "@kadira/storybook": "^2.5.2",
     "classnames": "^2.2.5",
+    "lodash.shuffle": "^4.2.0",
     "react-scripts": "0.6.1"
   },
   "dependencies": {
