--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
     "@kadira/storybook": "^2.5.2",
     "classnames": "^2.2.5",
     "lodash.shuffle": "^4.2.0",
+    "lodash.uniq": "^4.5.0",
     "react-scripts": "0.6.1"
   },
   "dependencies": {
