--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "classnames": "^2.2.5",
     "lodash.shuffle": "^4.2.0",
     "lodash.uniq": "^4.5.0",
+    "lodash.uniqueid": "^4.0.1",
     "react-scripts": "0.6.1"
   },
   "dependencies": {
