--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ cache:
   directories:
   - node_modules
 before_install: cd client
+script: npm run build
+skip_cleanup: true
 deploy:
   provider: surge
-  project: ./build/
+  project: ./client/build/
   domain: sf-movie-quiz.surge.sh
